--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>spring.web</groupId>
-  <artifactId>NetManager</artifactId>
+  <artifactId>Net_Manager</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>NetManager Maven Webapp</name>
@@ -51,6 +51,6 @@
   </dependencies>
 
   <build>
-    <finalName>NetManager</finalName>
+    <finalName>Net_Manager</finalName>
   </build>
 </project>
