--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
       <artifactId>jstl</artifactId>
       <version>${jstl.version}</version>
     </dependency>
+    <dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi-ooxml</artifactId>
+	    <version>3.17</version>
+	</dependency>
   </dependencies>
 
   <build>
